--- a/montreal_data_presentation/package.json
+++ b/montreal_data_presentation/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "fast-csv": "^4.3.6"
+    "fast-csv": "^4.3.6",
+    "mtl-data": "^1.0.1"
   }
 }
